[package]
name = "signum-node-rs"
version = "0.1.0"
authors = ["damccull <401104+damccull@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.84.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "signum-node-rs"

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
web = ["dioxus/web"]

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack", "router"] }
reqwest = { version = "0.12.12", features = ["json", "native-tls", "charset", "http2", "macos-system-configuration"], default-features = false }
# rustls-platform-verifier = { version = "0.5.0" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "=0.2.97"

# [dev-dependencies]
# once_cell = "1.19.0"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
