[package]
name = "signum-node-rs"
version = "0.1.0"
authors = ["damccull <401104+damccull@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.84.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "signum-node-rs"

[features]
default = ["web"]
bunyan = ["tracing-bunyan-formatter"]
desktop = ["dioxus/desktop", "server"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "axum", "tokio", "dioxus-fullstack/axum"]
web = ["dioxus/web", "dioxus-web"]

[dependencies]
axum = { version = "0.7", optional = true }
dioxus = { version = "0.6.0", features = ["fullstack"] }
dioxus-web = { version = "0.6.0", features = ["hydrate"], optional = true }
dioxus-fullstack = { version="0.6.0" }
reqwest = { version = "0.12.12", features = ["json", "native-tls", "charset", "http2", "macos-system-configuration"], default-features = false }
# rustls-platform-verifier = { version = "0.5.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"], optional = true }
wasm-bindgen = "=0.2.97"
dioxus-cli-config = "0.6.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = { version = "0.3.10", optional = true }

# [dev-dependencies]
# once_cell = "1.19.0"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


# Enable if openssl doesn't compile for android
# [target.'cfg(target_os = "android")'.dependencies]
# openssl = { version = "*", features = ["vendored"] }
