[package]
name = "signum-node-rs"
version = "0.1.0"
authors = ["damccull <401104+damccull@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.84.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "signum-node-rs"

[features]
default = ["web"]
bunyan = ["tracing-bunyan-formatter"]
desktop = ["dioxus/desktop", "server"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "axum", "tokio", "dioxus-fullstack/axum", "surrealdb", "http"]
web = ["dioxus/web", "dioxus-web", "console_error_panic_hook", "tracing-wasm" ]

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.7", optional = true }
config = "0.15.6"
console_error_panic_hook = {version = "0.1.7", optional = true }
dioxus = { version = "0.6.0", features = ["fullstack"] }
dioxus-cli-config = "0.6.0"
dioxus-fullstack = { version="0.6.0" }
dioxus-web = { version = "0.6.0", features = ["hydrate"], optional = true }
http = { version = "1.2.0", optional = true }
itertools = "0.14.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json", "native-tls", "charset", "http2", "macos-system-configuration", "rustls-tls", "cookies"], default-features = false }
# rustls-platform-verifier = { version = "0.5.0" }
tokio = { version = "1.43.0", features = ["full"], optional = true }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = { version = "0.3.10", optional = true }
tracing-wasm = { version="0.2.1", optional = true }
uuid = { version = "1.12.1", features = ["js", "serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.12.0"
surrealdb = { version = "2.1.4", features = ["kv-mem"], optional = true }
thiserror = "2.0.11"
wasm-bindgen = "=0.2.97"

# [dev-dependencies]
# once_cell = "1.19.0"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


# Enable if openssl doesn't compile for android
# [target.'cfg(target_os = "android")'.dependencies]
# openssl = { version = "*", features = ["vendored"] }
